# Recsys

Netflix/ranking/vae/: .gitignore  README.md  demo.ipynb  preprocess.ipynb  pyproject.toml  vae.py
infrastructure/distributed_compute/Ads/: Ads.py  README.md  cluster-serve-vm.yaml  cluster.yaml  eval.py  pyproject.toml  rayService.yaml  serve-config.yaml  serve_mmoe.py  split_ranker.ipynb  train.py  train_teacher.py
infrastructure/feature_store/Ads/: README.md  preprocess.ipynb  pyproject.toml
infrastructure/feature_store/Ads/assets/ray/: README.md  ray_job.py
infrastructure/feature_store/Ads/golden_raven/feature_repo/: feast_test.ipynb  feature_definitions.py  feature_store.yaml  test_workflow.py
ranking/ads_Moe/: Ads.py  README.md  demo.ipynb  preprocess.ipynb  pyproject.toml
ranking/ads_Moe/tricks/: qr_embedding_bag.py
ranking/dcn/: README.md  dcn.py  demo.ipynb  dlrm_data_pytorch.py  pyproject.toml
ranking/dlrm/: README.md  demo.ipynb  dlrm.py  pyproject.toml
ranking/dlrm/tricks/: md_embedding_bag.py
retrieval/two-tower/: .gitignore  README.md  inference.ipynb  preprocess.ipynb  pyproject.toml  tower.py  train.ipynb
retrieval/vae/: demo.ipynb  preprocess.ipynb  vae.py
retrieval/wmf/: demo.ipynb  pyproject.toml  wmf.py
