[project]
name = "dlrm"
version = "0.1.0"
description = "Deep Learning Recommendation Model Implementation for Item Ranking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
]
